# sewage-infrastructure-damage-evaluation

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
configs/: base.yaml  dinov2_mask2former_crack.yaml  dinov2_mask2former_csdd.yaml
data/: __init__.py  crack_dataset.py  csdd_dataset.py  download_datasets.sh  sewer_ml_dataset.py  transforms.py
evaluation/: __init__.py  evaluate.py  metrics.py
model/: __init__.py  backbone.py  segmentor.py
scripts/: run_evaluation.sh  run_finetuning.sh  run_pretraining.sh
training/: __init__.py  collate.py  train_segmentation.py  train_ssl.py
