[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "side-train"
version = "0.1.0"
description = "Mask2Former + DINOv2 training scaffold for sewer defect instance segmentation"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "pycocotools>=2.0.7",
    "scikit-image>=0.22.0",
    "timm>=0.9.16",
    "omegaconf>=2.3.0",
    "einops>=0.7.0",
    "wandb>=0.17.0",
    "gdown>=5.1.0",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*", "training*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py310"
